force-app/main/default/objects/DepartmentProfessor__c/DepartmentProfessor__c.object-meta.xml
<CustomObject>
    <label>Department Professor</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Department Professor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Professors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>