force-app/main/default/objects/DepartmentProfessor__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Department Professor</label>
    <type>Checkbox</type>
</CustomField>