force-app/main/default/objects/DepartmentProfessor__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <label>Professor</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>DepartmentProfessors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>